--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <title>Aribidara Jerry Portfolio</title>
     <link rel="stylesheet" href="maitre-index.css" />
-    <link rel="stylesheet" href="css/index2.css" />
     <link rel="stylesheet" href="css/media-queries.css" />
     <link rel="stylesheet" href="css/all.css" />
     <link rel="shortcut icon" type="image/jpg" href="img/logo.png" />
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-    <meta name="keywords" content="About Aribidara Jerry" />
+    <meta name="keywords" content="Aribidara Jerry" />
     <meta name="description" content="I'm a teacher, composer, frontend dev...">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/webquery.js" type="text/javascript" charset="utf-8"></script>
