--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
         <button id="subscribe">Subscribe</button>
 
         <div class="contact">
-            <a href="https://wa.me/+2348123998572">
+            <a rel="noopener noreferrer" href="https://wa.me/+2348123998572">
                 <i class="fa-brands fa-whatsapp fa-1x"></i>
             </a>
-            <a href="https://facebook.com/aribidarajerry">
+            <a rel="noopener noreferrer" href="https://facebook.com/aribidarajerry">
                 <i class="fa-brands fa-facebook fa-1x"></i>
             </a>
-            <a href="https://t.me/aribidarajerry">
+            <a rel="noopener noreferrer" href="https://t.me/aribidarajerry">
                 <i class="fa-brands fa-telegram fa-1x"></i>
             </a>
-            <a href="mailto:aribidarajerry@gmail.com?subject=Enquiry">
+            <a rel="noopener noreferrer" href="mailto:aribidarajerry@gmail.com?subject=Enquiry">
                 <i class="fa-solid fa-envelope fa-1x"></i>
             </a>
         </div>
@@ -55,9 +55,52 @@
     <div id="message"></div>
     <section>
         <div class="greet">
-            <div>
+            <div class="carousel">
                 <i class="fa-solid fa-arrow-left"></i>
-                <img src="img/jerry1.png" alt="profile picture" class="imgs">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/jerry1.png" alt="Image 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/jerry2.png" alt="Image 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/jerry3.png" alt="Image 3">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/jerry4.png" alt="Image 4">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/jerry5.png" alt="Image 5">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/jerry6.png" alt="Image 6">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/jerry7.png" alt="Image 7">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/jerry8.png" alt="Image 8">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/jerry9.png" alt="Image 9">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/jerry10.png" alt="Image 10">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/jerry11.png" alt="Image 11">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/jerry12.png" alt="Image 12">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/jerry13.png" alt="Image 13">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/jerry14.png" alt="Image 14">
+                    </div>
+                </div>
                 <i class="fa-solid fa-arrow-right" onclick="rotate()"></i>
             </div>
             <h2>Welcome to my site!</h2>
@@ -67,7 +110,7 @@
             <div class="line"></div>
             <div class="note">
                 <p class="content">
-                    Hello! I'm Aribidara Jerry, a multifaceted individual with a passion for teaching, music, and technology. As a certified teacher, I've had the privilege of inspiring and educating students in various settings. My love for music led me to become an instrumentalist, and I've had the honor of being certified by renowned institutions such as <a href="https://muson.org/">The Musical Society Of Nigeria (MUSON)</a> and <a href="https://www.abrsm.org/en-ng">The Associated Board of Royal Schools of Music (ABRSM)</a>.<br /><br />
+                    Hello! I'm Aribidara Jerry, a multifaceted individual with a passion for teaching, music, and technology. As a certified teacher, I've had the privilege of inspiring and educating students in various settings. My love for music led me to become an instrumentalist, and I've had the honor of being certified by renowned institutions such as <a rel="noopener noreferrer" href="https://muson.org/">The Musical Society Of Nigeria (MUSON)</a> and <a rel="noopener noreferrer" href="https://www.abrsm.org/en-ng">The Associated Board of Royal Schools of Music (ABRSM)</a>.<br /><br />
                     In addition to my teaching and musical pursuits, I'm also a frontend developer with a keen interest in building innovative and user-friendly digital experiences. This site was solely developed by me. I'm always looking for ways to combine my skills to create something truly unique and impactful.
                 </p>
             </div>
@@ -86,54 +129,54 @@
                 <iframe src="https://youtube.com/embed/VN8rN0hLrZM?playlist=VN8rN0hLrZM&loop=1"></iframe>
             </div>
             <p class="content">
-                You can visit my YouTube channel for additional performances and music content by clicking <a href="https://www.youtube.com/@aribidarajerry7889"><i class="fa-brands fa-youtube"></i>Aribidara Jerry</a>.
+                You can visit my YouTube channel for additional performances and music content by clicking <a rel="noopener noreferrer" href="https://www.youtube.com/@aribidarajerry7889"><i class="fa-brands fa-youtube"></i>Aribidara Jerry</a>.
             </p>
             <h3 class="sub-topic">Compositions</h3>
             <p class="content">
                 Discover my musical creations, featuring a collection of videos and original compositions. Explore the intersection of sound and vision, and experience the depth of my artistic expression.
             </p>
             <div class="works">
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383569/Product.aspx" target="_blank">
+                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383569/Product.aspx" target="_blank">
                     <div class="w">
                         <img src="img/score.png" alt="Score image" class="work">
                     </div>
                 </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383564/Product.aspx" target="_blank">
+                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383564/Product.aspx" target="_blank">
                     <div class="w">
-                        <img src="img/audio.png" 
-                        alt="Score image" 
+                        <img src="img/audio.png"
+                        alt="Score image"
                         class="work">
                     </div>
                 </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521415/Product.aspx" target="_blank">
+                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521415/Product.aspx" target="_blank">
                     <div class="w">
                         <img src="img/trio.png" alt="Score image" class="work">
                     </div>
                 </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521403/Product.aspx" target="_blank">
+                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521403/Product.aspx" target="_blank">
                     <div class="w">
                         <img src="img/invention.png" alt="Score image" class="work">
                     </div>
                 </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521416/Product.aspx" target="_blank">
+                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521416/Product.aspx" target="_blank">
                     <div class="w">
                         <img src="img/moment.png" alt="Score image" class="work">
                     </div>
                 </a>
                 <iframe src="https://youtube.com/embed/HQiaYBr4QTE?playlist=HQiaYBr4QTE&loop=1"></iframe>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591225/Product.aspx" target="_blank">
+                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591225/Product.aspx" target="_blank">
                     <div class="w">
                         <img src="img/gavotte.png" alt="Score image" class="work">
                     </div>
                 </a>
-                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx" target="_blank">
+                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx" target="_blank">
                     <div class="w">
                         <img src="img/waltz-in-c-sharp.png" alt="Score image" class="work">
                     </div>
                 </a>
             </div>
             <p class="content">
-                You will find a list of my composition on <a href="https://www.sheetmusicdirect.com/en-US/Search.aspx?query=Aribidara%2BJerry" target="_blank"><i>SHEETMUSICDIRECT</i></a> or <a href="https://www.sheetmusicplus.com/en/explore?q=Aribidara%20Jerry%20" target="_blank"><i>SHEETMUSICPLUS</i></a>.
+                You will find a list of my composition on <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/Search.aspx?query=Aribidara%2BJerry" target="_blank"><cite><i>SHEETMUSICDIRECT</i></cite></a> or <a rel="noopener noreferrer" href="https://www.sheetmusicplus.com/en/explore?q=Aribidara%20Jerry%20" target="_blank"><cite><i>SHEETMUSICPLUS</i></cite></a>.
             </p>
         </article>
         <article class="article-3">
@@ -143,23 +186,23 @@
                 Get in touch with me! Whether you have a question, collaboration idea, or just want to say hello, I'd love to hear from you. Reach out through the social media handles below.
             </p>
             <div class="contact">
-                <a href="https://wa.me/+2348123998572">
+                <a rel="noopener noreferrer" href="https://wa.me/+2348123998572">
                     <i class="fa-brands fa-whatsapp fa-1x"></i>
                 </a>
-                <a href="https://facebook.com/aribidarajerry">
+                <a rel="noopener noreferrer" href="https://facebook.com/aribidarajerry">
                     <i class="fa-brands fa-facebook fa-1x"></i>
                 </a>
-                <a href="https://t.me/aribidarajerry">
+                <a rel="noopener noreferrer" href="https://t.me/aribidarajerry">
                     <i class="fa-brands fa-telegram fa-1x"></i>
                 </a>
-                <a href="mailto:aribidarajerry@gmail.com?subject=Enquiry">
+                <a rel="noopener noreferrer" href="mailto:aribidarajerry@gmail.com?subject=Enquiry">
                     <i class="fa-solid fa-envelope fa-1x"></i>
                 </a>
             </div>
         </article>
     </section>
     <section class="form">
-        <form>
+        <form action="JavaScript:void(0)">
             <p>
                 Subscribe to get updates on recent posts.
             </p>
