--- a/index.html
+++ b/index.html
@@ -33,21 +33,27 @@
             <li>
                 Contact
             </li>
+            <li>
+                Image gallery
+            </li>
         </ul>
 
         <button id="subscribe">Subscribe</button>
 
         <div class="contact">
-            <a rel="noopener noreferrer" href="https://wa.me/+2348123998572">
+            <a href="https://wa.me/+2348123998572">
                 <i class="fa-brands fa-whatsapp fa-1x"></i>
             </a>
-            <a rel="noopener noreferrer" href="https://facebook.com/aribidarajerry">
+            <a href="https://facebook.com/aribidarajerry">
                 <i class="fa-brands fa-facebook fa-1x"></i>
             </a>
-            <a rel="noopener noreferrer" href="https://t.me/aribidarajerry">
+            <a href="https://github.com/aribidarajerry">
+                <i class="fa-brands fa-github fa-1x"></i>
+            </a>
+            <a href="https://t.me/aribidarajerry">
                 <i class="fa-brands fa-telegram fa-1x"></i>
             </a>
-            <a rel="noopener noreferrer" href="mailto:aribidarajerry@gmail.com?subject=Enquiry">
+            <a href="mailto:aribidarajerry@gmail.com?subject=Enquiry">
                 <i class="fa-solid fa-envelope fa-1x"></i>
             </a>
         </div>
@@ -108,12 +114,10 @@
         <article class="article-1">
             <h2 id="about">About</h2>
             <div class="line"></div>
-            <div class="note">
-                <p class="content">
-                    Hello! I'm Aribidara Jerry, a multifaceted individual with a passion for teaching, music, and technology. As a certified teacher, I've had the privilege of inspiring and educating students in various settings. My love for music led me to become an instrumentalist, and I've had the honor of being certified by renowned institutions such as <a rel="noopener noreferrer" href="https://muson.org/">The Musical Society Of Nigeria (MUSON)</a> and <a rel="noopener noreferrer" href="https://www.abrsm.org/en-ng">The Associated Board of Royal Schools of Music (ABRSM)</a>.<br /><br />
-                    In addition to my teaching and musical pursuits, I'm also a frontend developer with a keen interest in building innovative and user-friendly digital experiences. This site was solely developed by me. I'm always looking for ways to combine my skills to create something truly unique and impactful.
-                </p>
-            </div>
+            <p class="content">
+                Hello! I'm Aribidara Jerry, a multifaceted individual with a passion for teaching, music, and technology. As a certified teacher, I've had the privilege of inspiring and educating students in various settings. My love for music led me to become an instrumentalist, and I've had the honor of being certified by renowned institutions such as <a href="https://muson.org/">The Musical Society Of Nigeria (MUSON)</a> and <a href="https://www.abrsm.org/en-ng">The Associated Board of Royal Schools of Music (ABRSM)</a>.<br /><br />
+                In addition to my teaching and musical pursuits, I'm also a frontend developer with a keen interest in building innovative and user-friendly digital experiences. This site was solely developed by me. I'm always looking for ways to combine my skills to create something truly unique and impactful.
+            </p>
         </article>
         <article class="article-2">
             <h2 id="works" class="topic">Works</h2>
@@ -129,54 +133,54 @@
                 <iframe src="https://youtube.com/embed/VN8rN0hLrZM?playlist=VN8rN0hLrZM&loop=1"></iframe>
             </div>
             <p class="content">
-                You can visit my YouTube channel for additional performances and music content by clicking <a rel="noopener noreferrer" href="https://www.youtube.com/@aribidarajerry7889"><i class="fa-brands fa-youtube"></i>Aribidara Jerry</a>.
+                You can visit my YouTube channel for additional performances and music content by clicking <a href="https://www.youtube.com/@aribidarajerry7889"><i class="fa-brands fa-youtube"></i>Aribidara Jerry</a>.
             </p>
             <h3 class="sub-topic">Compositions</h3>
             <p class="content">
                 Discover my musical creations, featuring a collection of videos and original compositions. Explore the intersection of sound and vision, and experience the depth of my artistic expression.
             </p>
             <div class="works">
-                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383569/Product.aspx" target="_blank">
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383569/Product.aspx" target="_blank">
                     <div class="w">
                         <img src="img/score.png" alt="Score image" class="work">
                     </div>
                 </a>
-                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383564/Product.aspx" target="_blank">
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383564/Product.aspx" target="_blank">
                     <div class="w">
                         <img src="img/audio.png"
                         alt="Score image"
                         class="work">
                     </div>
                 </a>
-                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521415/Product.aspx" target="_blank">
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521415/Product.aspx" target="_blank">
                     <div class="w">
                         <img src="img/trio.png" alt="Score image" class="work">
                     </div>
                 </a>
-                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521403/Product.aspx" target="_blank">
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521403/Product.aspx" target="_blank">
                     <div class="w">
                         <img src="img/invention.png" alt="Score image" class="work">
                     </div>
                 </a>
-                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521416/Product.aspx" target="_blank">
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521416/Product.aspx" target="_blank">
                     <div class="w">
                         <img src="img/moment.png" alt="Score image" class="work">
                     </div>
                 </a>
                 <iframe src="https://youtube.com/embed/HQiaYBr4QTE?playlist=HQiaYBr4QTE&loop=1"></iframe>
-                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591225/Product.aspx" target="_blank">
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591225/Product.aspx" target="_blank">
                     <div class="w">
                         <img src="img/gavotte.png" alt="Score image" class="work">
                     </div>
                 </a>
-                <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx" target="_blank">
+                <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx" target="_blank">
                     <div class="w">
                         <img src="img/waltz-in-c-sharp.png" alt="Score image" class="work">
                     </div>
                 </a>
             </div>
             <p class="content">
-                You will find a list of my composition on <a rel="noopener noreferrer" href="https://www.sheetmusicdirect.com/en-US/Search.aspx?query=Aribidara%2BJerry" target="_blank"><cite><i>SHEETMUSICDIRECT</i></cite></a> or <a rel="noopener noreferrer" href="https://www.sheetmusicplus.com/en/explore?q=Aribidara%20Jerry%20" target="_blank"><cite><i>SHEETMUSICPLUS</i></cite></a>.
+                You will find a list of my composition on <a href="https://www.sheetmusicdirect.com/en-US/Search.aspx?query=Aribidara%2BJerry" target="_blank"><cite><i>SHEETMUSICDIRECT</i></cite></a> or <a href="https://www.sheetmusicplus.com/en/explore?q=Aribidara%20Jerry%20" target="_blank"><cite><i>SHEETMUSICPLUS</i></cite></a>.
             </p>
         </article>
         <article class="article-3">
@@ -186,16 +190,24 @@
                 Get in touch with me! Whether you have a question, collaboration idea, or just want to say hello, I'd love to hear from you. Reach out through the social media handles below.
             </p>
             <div class="contact">
-                <a rel="noopener noreferrer" href="https://wa.me/+2348123998572">
+                <a href="https://wa.me/+2348123998572">
+                    <b>WhatsApp</b>
                     <i class="fa-brands fa-whatsapp fa-1x"></i>
                 </a>
-                <a rel="noopener noreferrer" href="https://facebook.com/aribidarajerry">
+                <a href="https://facebook.com/aribidarajerry">
+                    <b>Facebook</b>
                     <i class="fa-brands fa-facebook fa-1x"></i>
                 </a>
-                <a rel="noopener noreferrer" href="https://t.me/aribidarajerry">
+                <a href="https://github.com/aribidarajerry">
+                    <b>GitHub</b>
+                    <i class="fa-brands fa-github fa-1x"></i>
+                </a>
+                <a href="https://t.me/aribidarajerry">
+                    <b>Telegram</b>
                     <i class="fa-brands fa-telegram fa-1x"></i>
                 </a>
-                <a rel="noopener noreferrer" href="mailto:aribidarajerry@gmail.com?subject=Enquiry">
+                <a href="mailto:aribidarajerry@gmail.com?subject=Enquiry">
+                    <b>Mail</b>
                     <i class="fa-solid fa-envelope fa-1x"></i>
                 </a>
             </div>
@@ -209,6 +221,35 @@
             <input type="email" placeholder="Enter your Email">
             <input type="submit" value="Subscribe" />
         </form>
+    </section>
+    <section>
+        <article class="article-2">
+            <h2 id="gallery" class="topic">Image gallery</h2>
+            <div class="line"></div>
+            <div class="gallery">
+                <img src="img/jerry1.png" alt="Image">
+                <img src="img/jerry2.png" alt="Image">
+                <img src="img/jerry3.png" alt="Image">
+                <img src="img/jerry4.png" alt="Image">
+                <img src="img/jerry5.png" alt="Image">
+                <img src="img/jerry6.png" alt="Image">
+                <img src="img/jerry7.png" alt="Image">
+                <img src="img/jerry8.png" alt="Image">
+                <img src="img/jerry9.png" alt="Image">
+                <img src="img/jerry10.png" alt="Image">
+                <img src="img/jerry11.png" alt="Image">
+                <img src="img/jerry12.png" alt="Image">
+                <img src="img/jerry13.png" alt="Image">
+                <img src="img/jerry14.png" alt="Image">
+                <img src="img/jerry15.png" alt="Image">
+                <img src="img/jerry16.png" alt="Image">
+                <img src="img/jerry17.png" alt="Image">
+                <img src="img/jerry18.png" alt="Image">
+                <img src="img/jerry19.png" alt="Image">
+                <img src="img/jerry20.png" alt="Image">
+                <img src="img/jerry21.png" alt="Image">
+            </div>
+        </article>
     </section>
     <footer>
         Copyright &copy;
