--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="maitre-index.css" />
     <link rel="stylesheet" href="css/media-queries.css" />
     <link rel="stylesheet" href="css/all.css" />
-    <link rel="shortcut icon" type="image/jpg" href="img/logo.png" />
+    <link rel="shortcut icon" type="image/jpg" href="img/logo.jpg" />
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta name="keywords" content="Aribidara Jerry" />
     <meta name="description" content="I'm a teacher, composer, frontend dev...">
@@ -65,46 +65,46 @@
                 <i class="fa-solid fa-arrow-left"></i>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/jerry1.png" alt="Image 1">
+                        <img src="img/jerry1.jpg" alt="Image 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/jerry2.png" alt="Image 2">
+                        <img src="img/jerry2.jpg" alt="Image 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/jerry3.png" alt="Image 3">
+                        <img src="img/jerry3.jpg" alt="Image 3">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/jerry4.png" alt="Image 4">
+                        <img src="img/jerry4.jpg" alt="Image 4">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/jerry5.png" alt="Image 5">
+                        <img src="img/jerry5.jpg" alt="Image 5">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/jerry6.png" alt="Image 6">
+                        <img src="img/jerry6.jpg" alt="Image 6">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/jerry7.png" alt="Image 7">
+                        <img src="img/jerry7.jpg" alt="Image 7">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/jerry8.png" alt="Image 8">
+                        <img src="img/jerry8.jpg" alt="Image 8">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/jerry9.png" alt="Image 9">
+                        <img src="img/jerry9.jpg" alt="Image 9">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/jerry10.png" alt="Image 10">
+                        <img src="img/jerry10.jpg" alt="Image 10">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/jerry11.png" alt="Image 11">
+                        <img src="img/jerry11.jpg" alt="Image 11">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/jerry12.png" alt="Image 12">
+                        <img src="img/jerry12.jpg" alt="Image 12">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/jerry13.png" alt="Image 13">
+                        <img src="img/jerry13.jpg" alt="Image 13">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/jerry14.png" alt="Image 14">
+                        <img src="img/jerry14.jpg" alt="Image 14">
                     </div>
                 </div>
                 <i class="fa-solid fa-arrow-right" onclick="rotate()"></i>
@@ -142,40 +142,40 @@
             <div class="works">
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383569/Product.aspx" target="_blank">
                     <div class="w">
-                        <img src="img/score.png" alt="Score image" class="work">
+                        <img src="img/score.jpg" alt="Score image" class="work">
                     </div>
                 </a>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1383564/Product.aspx" target="_blank">
                     <div class="w">
-                        <img src="img/audio.png"
+                        <img src="img/audio.jpg"
                         alt="Score image"
                         class="work">
                     </div>
                 </a>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521415/Product.aspx" target="_blank">
                     <div class="w">
-                        <img src="img/trio.png" alt="Score image" class="work">
+                        <img src="img/trio.jpg" alt="Score image" class="work">
                     </div>
                 </a>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521403/Product.aspx" target="_blank">
                     <div class="w">
-                        <img src="img/invention.png" alt="Score image" class="work">
+                        <img src="img/invention.jpg" alt="Score image" class="work">
                     </div>
                 </a>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1521416/Product.aspx" target="_blank">
                     <div class="w">
-                        <img src="img/moment.png" alt="Score image" class="work">
+                        <img src="img/moment.jpg" alt="Score image" class="work">
                     </div>
                 </a>
                 <iframe src="https://youtube.com/embed/HQiaYBr4QTE?playlist=HQiaYBr4QTE&loop=1"></iframe>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591225/Product.aspx" target="_blank">
                     <div class="w">
-                        <img src="img/gavotte.png" alt="Score image" class="work">
+                        <img src="img/gavotte.jpg" alt="Score image" class="work">
                     </div>
                 </a>
                 <a href="https://www.sheetmusicdirect.com/en-US/se/ID_No/1591245/Product.aspx" target="_blank">
                     <div class="w">
-                        <img src="img/waltz-in-c-sharp.png" alt="Score image" class="work">
+                        <img src="img/waltz-in-c-sharp.jpg" alt="Score image" class="work">
                     </div>
                 </a>
             </div>
@@ -227,27 +227,27 @@
             <h2 id="gallery" class="topic">Image gallery</h2>
             <div class="line"></div>
             <div class="gallery">
-                <img src="img/jerry1.png" alt="Image">
-                <img src="img/jerry2.png" alt="Image">
-                <img src="img/jerry3.png" alt="Image">
-                <img src="img/jerry4.png" alt="Image">
-                <img src="img/jerry5.png" alt="Image">
-                <img src="img/jerry6.png" alt="Image">
-                <img src="img/jerry7.png" alt="Image">
-                <img src="img/jerry8.png" alt="Image">
-                <img src="img/jerry9.png" alt="Image">
-                <img src="img/jerry10.png" alt="Image">
-                <img src="img/jerry11.png" alt="Image">
-                <img src="img/jerry12.png" alt="Image">
-                <img src="img/jerry13.png" alt="Image">
-                <img src="img/jerry14.png" alt="Image">
-                <img src="img/jerry15.png" alt="Image">
-                <img src="img/jerry16.png" alt="Image">
-                <img src="img/jerry17.png" alt="Image">
-                <img src="img/jerry18.png" alt="Image">
-                <img src="img/jerry19.png" alt="Image">
-                <img src="img/jerry20.png" alt="Image">
-                <img src="img/jerry21.png" alt="Image">
+                <img src="img/jerry1.jpg" alt="Image">
+                <img src="img/jerry2.jpg" alt="Image">
+                <img src="img/jerry3.jpg" alt="Image">
+                <img src="img/jerry4.jpg" alt="Image">
+                <img src="img/jerry5.jpg" alt="Image">
+                <img src="img/jerry6.jpg" alt="Image">
+                <img src="img/jerry7.jpg" alt="Image">
+                <img src="img/jerry8.jpg" alt="Image">
+                <img src="img/jerry9.jpg" alt="Image">
+                <img src="img/jerry10.jpg" alt="Image">
+                <img src="img/jerry11.jpg" alt="Image">
+                <img src="img/jerry12.jpg" alt="Image">
+                <img src="img/jerry13.jpg" alt="Image">
+                <img src="img/jerry14.jpg" alt="Image">
+                <img src="img/jerry15.jpg" alt="Image">
+                <img src="img/jerry16.jpg" alt="Image">
+                <img src="img/jerry17.jpg" alt="Image">
+                <img src="img/jerry18.jpg" alt="Image">
+                <img src="img/jerry19.jpg" alt="Image">
+                <img src="img/jerry20.jpg" alt="Image">
+                <img src="img/jerry21.jpg" alt="Image">
             </div>
         </article>
     </section>
