--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Aribidara Jerry Portfolio</title>
-    <link rel="stylesheet" href="maitre-index.css" />
-    <link rel="stylesheet" href="css/media-queries.css" />
-    <link rel="stylesheet" href="css/all.css" />
-    <link rel="shortcut icon" type="image/jpg" href="img/logo.jpg" />
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta name="keywords" content="Aribidara Jerry" />
     <meta name="description" content="I'm a teacher, composer, frontend dev...">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aribidara Jerry Portfolio</title>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/media-queries.css" />
+    <link rel="stylesheet" href="css/all.css" />
+    <link rel="shortcut icon" type="image/jpg" href="img/logo.jpg" />
     <script src="js/webquery.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/index.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/script.js" type="text/javascript" charset="utf-8"></script>
@@ -35,6 +35,10 @@
             </li>
             <li>
                 Image gallery
+            </li>
+            <li>
+                <h4>Eclectic site</h4>
+                <i class="fa-solid fa-external-link"></i>
             </li>
         </ul>
 
