--- a/index.html
+++ b/index.html
@@ -24,18 +24,26 @@
     </div>
     <nav>
         <ul>
-            <li>
-                About
-            </li>
-            <li>
-                Works
-            </li>
-            <li>
-                Contact
-            </li>
-            <li>
-                Image gallery
-            </li>
+            <a href="#about">
+                <li>
+                    About
+                </li>
+            </a>
+            <a href="#works">
+                <li>
+                    Works
+                </li>
+            </a>
+            <a href="#contact">
+                <li>
+                    Contact
+                </li>
+            </a>
+            <a href="#gallery">
+                <li>
+                    Image gallery
+                </li>
+            </a>
             <li>
                 <h4>Eclectic site</h4>
                 <i class="fa-solid fa-external-link"></i>
@@ -217,7 +225,7 @@
             </div>
         </article>
     </section>
-    <section class="form">
+    <section class="form" id="form">
         <form action="JavaScript:void(0)">
             <p>
                 Subscribe to get updates on recent posts.
